[package]
name = "buffer_io"
version = "1.0.1"
description = "an intuitive library for reading and writing binary buffers."
homepage = "https://rainway.com"
license = "MIT"
repository = "https://github.com/RainwayApp/buffer-io"
authors = ["Andrew Sampson <andrew@rainway.com>"]
edition = "2018"
categories = ["encoding", "parsing"]
keywords = ["buffer", "binary", "reader", "writer", "byte"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]